Deployment/dev/k8sClusterDepAWSKOPS/modules/hn-ms2/ip-cluster-hn.yml
apiVersion: v1
kind: Service
metadata:
  name: hn-ms2-cluster-ip
  namespace: hn-ms2
spec:
  type: ClusterIP
  selector:
    app: hn-ms2
  ports:
    - port: 3050        # Used in multip client system
      targetPort: 3050  # The EXPOSE port of container
      # nodePort: 32100
