Deployment/dev/k8sClusterDepAWSKOPS/modules/hn-ms2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hn-ms2
  name: hn-ms2-ingress
  annotations:
    cert-manager.io/cluster-issuer: "muf-ca-cluster-issuer"
    cert-manager.io/duration: "24000h"   
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - api.hn.com
    secretName: hn-ms2-certificate
  rules:
    - host: 'api.hn.com'
      http:
        paths:
          - path: /hn-ms2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hn-ms2-cluster-ip
                port:
                  number: 3050                             

# /hn-ms2               -->  /
# /hn-ms2/muf           -->  /muf
